--- a/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:Ix4ServiceConfigurator.Controls"
         xmlns:core="clr-namespace:System;assembly=mscorlib"
         xmlns:dataModels="clr-namespace:Ix4Models;assembly=Ix4Models"
-        mc:Ignorable="d" Style="{StaticResource MainWondowsStyle}"
+        mc:Ignorable="d" Style="{StaticResource MainWindowsStyle}"
         Title="Ix4-Agent Settings" SizeToContent="WidthAndHeight">
     <Window.Resources>
         <ObjectDataProvider x:Key="DataSourceType" MethodName="GetValues" ObjectType="{x:Type core:Enum}">
