--- a/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
@@ -29,24 +29,14 @@
 
         <controls:CustomerInfoControl x:Name="UIUserInfo"  DockPanel.Dock="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" DataContext="{Binding Customer}"/>
         <controls:ScheduleControl DataContext="{Binding Customer.ScheduleSettings}"/>
-        <ComboBox Width="100" Margin="10,10,0,10" ItemsSource="{Binding Source={StaticResource DataSourceType}}" SelectedItem="{Binding Path=SelectedDataSource}" DockPanel.Dock="Top" HorizontalAlignment="Left"/>
+        
         <Button Height="50" Margin="10,0,5,0" IsDefault="True" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Command="{Binding}"
                 CommandParameter="{Binding ElementName=UIUserInfo}" Content="Save Information"/>
 
         <TabControl  >
           
-            <TabItem Header="Send data to Ix4Interface" Content="{Binding SendLicsRequestSettins}"  >
-                <!--<DockPanel Height="400" Width="400">
-                    <Expander Header="Articles" DockPanel.Dock="Top">
-                        
-                    </Expander>
-                    <Expander Header="Orders" DockPanel.Dock="Top">
-
-                    </Expander>
-                    <Expander Header="Deliveries" DockPanel.Dock="Top">
-
-                    </Expander>
-                </DockPanel>-->
+            <TabItem Header="Send data to Ix4Interface" Content="{Binding SendLicsRequestSettings}"  >
+              
             </TabItem>
             <TabItem Header="Recieve data from Ix4Interface">
                 <DockPanel Height="400" Width="400">
@@ -55,16 +45,7 @@
             </TabItem>
         </TabControl>
 
-        <!--<WrapPanel  >
-
-            <ContentControl Margin="0,5,0,0" Height="200" MaxWidth="800"
-                            ScrollViewer.CanContentScroll="True" 
-                            ScrollViewer.PanningMode="VerticalFirst" 
-                            ScrollViewer.VerticalScrollBarVisibility="Visible"
-                            
-                            x:Name="UiPlaceHsolder" Content="{Binding PluginControl}" />
-
-        </WrapPanel>-->
+       
 
 
     </StackPanel>
