--- a/Ix4ConnectorService/XmlDataExtractor/Settings/View/XamlFolderSettingsControl.xaml
+++ b/Ix4ConnectorService/XmlDataExtractor/Settings/View/XamlFolderSettingsControl.xaml
@@ -7,41 +7,11 @@
              xmlns:ix4Model ="clr-namespace:Ix4Models;assembly=Ix4Models"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <DockPanel Margin="5,10,5,10">
-        <CheckBox Content="Activated" IsThreeState="False" IsChecked="{Binding IsActivated}" DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="0,10,0,0" />
-        <Grid Margin="0,10,0,0" DockPanel.Dock="Top" IsEnabled="{Binding IsActivated}" ShowGridLines="False">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition Width="30"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="5"/>
-                <RowDefinition/>
-                <RowDefinition Height="5"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <CheckBox x:Name="UICheckArticles" Content="Select Xml Articles source folder: "  IsChecked="{Binding CheckArticles}" HorizontalAlignment="Left" VerticalAlignment="Center" />
-            <CheckBox x:Name="UICheckOrders"   Content="Select Xml Orders source folder: " IsChecked="{Binding CheckOrders}" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Center"/>
-            <CheckBox x:Name="UICheckDeliveries"  Content="Select Xml Deliveries source folder: " IsChecked="{Binding CheckDeliveries}" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center"/>
+    <StackPanel Orientation="Horizontal" Margin="5,10,5,10">
+        <Label Content="{Binding Source={StaticResource Localization}, Path=SelectSourceFolder}" />
+        <TextBox VerticalAlignment="Top"  VerticalContentAlignment="Center"  HorizontalContentAlignment="Stretch" Height="30" Width="150" Text="{Binding XmlItemSourceFolder}" ToolTip="{Binding XmlItemSourceFolder}" />
+        <Button VerticalAlignment="Top" Height="30" Content=" ... " Width="30" Command="{Binding}" CommandParameter="{x:Static ix4Model:Ix4RequestProps.Articles}" />
 
-            <TextBox VerticalAlignment="Center"  VerticalContentAlignment="Center"  Grid.Column="1" HorizontalAlignment="Stretch" IsEnabled="{Binding ElementName=UICheckArticles,Path=IsChecked}"
-                     HorizontalContentAlignment="Stretch" Height="30" Text="{Binding XmlArticleSourceFolder}" ToolTip="{Binding XmlArticleSourceFolder}"/>
-            <Button Height="30" Content=" ... " Width="30" Grid.Column="2" Command="{Binding}" CommandParameter="{x:Static ix4Model:Ix4RequestProps.Articles}" DockPanel.Dock="Right" IsEnabled="{Binding ElementName=UICheckArticles,Path=IsChecked}"/>
-
-
-            <TextBox VerticalContentAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" Width="Auto"  Height="30" 
-                     Text="{Binding XmlOrdersSourceFolder}" ToolTip="{Binding XmlOrdersSourceFolder}" IsEnabled="{Binding ElementName=UICheckOrders,Path=IsChecked}" />
-            <Button Height="30" Content=" ... " HorizontalAlignment="Stretch" Grid.Column="2" Grid.Row="2" Command="{Binding}" CommandParameter="{x:Static ix4Model:Ix4RequestProps.Orders}"
-                    IsEnabled="{Binding ElementName=UICheckOrders,Path=IsChecked}"/>
-
-            <TextBox VerticalContentAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" Width="Auto"  Height="30" 
-                     Text="{Binding XmlDeliveriesSourceFolder}" ToolTip="{Binding XmlDeliveriesSourceFolder}" IsEnabled="{Binding ElementName=UICheckDeliveries,Path=IsChecked}" />
-            <Button Height="30" Content=" ... " HorizontalAlignment="Stretch" Grid.Column="2" Grid.Row="4" Command="{Binding}" CommandParameter="{x:Static ix4Model:Ix4RequestProps.Deliveries}"
-                    IsEnabled="{Binding ElementName=UICheckDeliveries,Path=IsChecked}"/>
-
-        </Grid>
-    </DockPanel>
+    </StackPanel>
  
 </UserControl>
