--- a/Ix4ConnectorService/Ix4ServiceConfigurator/Controls/ScheduleControl.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/Controls/ScheduleControl.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Ix4ServiceConfigurator.Controls"
              xmlns:core="clr-namespace:System;assembly=mscorlib"
              xmlns:times="clr-namespace:Ix4Models.SettingsDataModel;assembly=Ix4Models"
+             xmlns:xceed="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
              Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -17,17 +18,23 @@
 
         </ObjectDataProvider>
     </UserControl.Resources>
-    <ListBox ItemsSource="{Binding ScheduledIssues}"  Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"
-             >
-        <ListBox.ItemTemplate>
-            <DataTemplate>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="{Binding Source={StaticResource Localization},Path=ScheduleArticles}" VerticalAlignment="Center" />
-                    <TextBox Text="{Binding secValue,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"/>
-                    <ComboBox ItemsSource="{Binding Source={StaticResource TimeSigns}}" SelectedItem="{Binding SelectedLanguage}"/>
-                </StackPanel>
-            </DataTemplate>
-        </ListBox.ItemTemplate>
-    </ListBox>
+    <DockPanel>
+        <DockPanel DockPanel.Dock="Top">
+            <Label Content="{Binding Source={StaticResource Localization},Path=WorkingHours}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
+            <Label Content="{Binding Source={StaticResource Localization},Path=From}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
+            <xceed:TimePicker Kind="Local" TimeInterval="1" Value="{Binding StartTime}" Width="100" Height="20" DockPanel.Dock="Left" VerticalAlignment="Top" />
+            <Label Content="{Binding Source={StaticResource Localization},Path=To}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
+            <xceed:TimePicker Kind="Local" TimeInterval="1" Value="{Binding EndTime}" Width="100" Height="20" HorizontalAlignment="Left" DockPanel.Dock="Left" VerticalAlignment="Top" />
+        </DockPanel>
+        <DockPanel DockPanel.Dock="Top">
+            <CheckBox IsChecked="{Binding UseSaturday}" Margin="0,5,5,0" Content="{Binding Source={StaticResource Localization}, Path=UseSat}" DockPanel.Dock="Left"/>
+            <CheckBox IsChecked="{Binding UseSunday}" Margin="0,5,5,0" Content="{Binding Source={StaticResource Localization}, Path=UseSun}" DockPanel.Dock="Left"/>
+        </DockPanel>
+        <DockPanel DockPanel.Dock="Top">
+            <Label Content="{Binding Source={StaticResource Localization}, Path=CheckDataEvery}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
+            <TextBox Text="{Binding TimeGap}" Width="50" Height="20" DockPanel.Dock="Left" VerticalAlignment="Top"/>
+            <ComboBox Width="70" SelectedItem="{Binding GapSign}" ItemsSource="{Binding Source={StaticResource TimeSigns}}" DockPanel.Dock="Left" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        </DockPanel>
+    </DockPanel>
    
 </UserControl>
