--- a/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
@@ -28,17 +28,17 @@
     <StackPanel Margin="0,10,10,5" x:Name="UIMainDockPanel">
 
         <controls:CustomerInfoControl x:Name="UIUserInfo"  DockPanel.Dock="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" DataContext="{Binding Customer}"/>
-        <controls:ScheduleControl DataContext="{Binding Customer.ScheduleSettings}"/>
+        
         
         <Button Height="50" Margin="10,0,5,0" IsDefault="True" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Command="{Binding}"
                 CommandParameter="{Binding ElementName=UIUserInfo}" Content="Save Information"/>
 
         <TabControl  >
           
-            <TabItem Header="Send data to Ix4Interface" Content="{Binding SendLicsRequestSettings}"  >
+            <TabItem Header="Send data to Ix4Interface" Content="{Binding SendLicsRequestSettings}" MaxWidth="800" >
               
             </TabItem>
-            <TabItem Header="Recieve data from Ix4Interface">
+            <TabItem Header="Recieve data from Ix4Interface" MaxWidth="800">
                 <DockPanel Height="400" Width="400">
                     <Label VerticalAlignment="Center" HorizontalAlignment="Center">Recieve data from Ix4Interface</Label>
                 </DockPanel>
