--- a/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
@@ -34,9 +34,13 @@
                 CommandParameter="{Binding ElementName=UIUserInfo}" Content="Save Information"/>
 
         <TabControl  >
-          
-            <TabItem Header="Send data to Ix4Interface" Content="{Binding SendLicsRequestSettings}" MaxWidth="800" >
-              
+
+            <TabItem Header="Send data to Ix4Interface" DataContext="{Binding ImportDataViewModel}" MaxWidth="800" >
+                <DockPanel>
+                    <controls:ImportDataItemControl  Header="A1" DataContext="{Binding ArticlesSettings}" DockPanel.Dock="Top"/>
+                    <controls:ImportDataItemControl  Header="O1" DataContext="{Binding OrdersSettings}" DockPanel.Dock="Top" />
+                    <controls:ImportDataItemControl  Header="D1" DataContext="{Binding DeliveriesSettings}" DockPanel.Dock="Top" />
+                </DockPanel>
             </TabItem>
             <TabItem Header="Recieve data from Ix4Interface" MaxWidth="800">
                 <DockPanel Height="400" Width="400">
