--- a/Ix4ConnectorService/Ix4ServiceConfigurator/Controls/ImportDataItemControl.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/Controls/ImportDataItemControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Ix4ServiceConfigurator.Controls.LicsRequestItemControl"
+﻿<Expander x:Class="Ix4ServiceConfigurator.Controls.ImportDataItemControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,39 +6,36 @@
              xmlns:local="clr-namespace:Ix4ServiceConfigurator.Controls"
              xmlns:core="clr-namespace:System;assembly=mscorlib"
              xmlns:dataModels="clr-namespace:Ix4Models;assembly=Ix4Models"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"   Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
+    <Expander.Resources>
         <ObjectDataProvider x:Key="DataSourceNames" MethodName="GetValues" ObjectType="{x:Type core:Enum}" >
             <ObjectDataProvider.MethodParameters>
                 <x:Type TypeName="dataModels:CustomDataSourceTypes"/>
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
-    </UserControl.Resources>
-    <Expander Header="{Binding Ix4PartItemName}" DockPanel.Dock="Top">
+    </Expander.Resources>
+    <DockPanel Margin="5">
 
-        <DockPanel >
-            
 
-            <DockPanel DockPanel.Dock="Top" Margin="10">
-                <CheckBox IsThreeState="False" IsChecked="{Binding IsActivated}" 
-                      Content="{Binding Source={StaticResource Localization},Path=Activate}" DockPanel.Dock="Left"/>
-                <Label HorizontalAlignment="Left" Content="{Binding Source={StaticResource Localization}, Path=SelectDataSource}" 
+        <DockPanel DockPanel.Dock="Top" Margin="10">
+            <CheckBox IsThreeState="False" IsChecked="{Binding IsActivated}" VerticalAlignment="Center"
+                      Content="{Binding Source={StaticResource Localization},Path=Activate}" VerticalContentAlignment="Center" DockPanel.Dock="Left"/>
+            <Label HorizontalAlignment="Left" VerticalContentAlignment="Center" Content="{Binding Source={StaticResource Localization}, Path=SelectDataSource}" 
                    DockPanel.Dock="Left"/>
-                <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding Source={StaticResource DataSourceNames}}" 
+            <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding Source={StaticResource DataSourceNames}}" 
                       SelectedItem="{Binding Path=SelectedDataSource}" DockPanel.Dock="Top"
                       Width="100" Margin="10,10,0,10"/>
-            </DockPanel>
-            
-            
-            
-                <local:ScheduleControl Margin="10" DataContext="{Binding Scheduler}" DockPanel.Dock="Top" HorizontalAlignment="Left"/>
-                <ContentControl Margin="0,5,0,0"  DockPanel.Dock="Top" HorizontalAlignment="Left" MaxHeight="400"
+        </DockPanel>
+
+
+
+        <local:ScheduleControl Margin="10" DataContext="{Binding Scheduler}" DockPanel.Dock="Top" HorizontalAlignment="Left"/>
+        <ContentControl Margin="0,5,0,0"  DockPanel.Dock="Top" HorizontalAlignment="Left" MaxHeight="400"
                             ScrollViewer.CanContentScroll="True" 
                             ScrollViewer.PanningMode="VerticalFirst" 
                             ScrollViewer.VerticalScrollBarVisibility="Visible"
                             
                             x:Name="UiPlaceHsolder" Content="{Binding PluginControl}" />
-        </DockPanel>
-    </Expander>
-</UserControl>
+    </DockPanel>
+</Expander>
