--- a/Ix4ConnectorService/SqlDataExtractor/DatabaseSettings/View/DbSettingsView.xaml
+++ b/Ix4ConnectorService/SqlDataExtractor/DatabaseSettings/View/DbSettingsView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SqlDataExtractor.DatabaseSettings.View"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Background="White"
              d:DesignHeight="300" d:DesignWidth="600">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisibility"/>
