--- a/Ix4ConnectorService/SqlDataExtractor/Settings/View/MsSqlOrdersSettingsView.xaml
+++ b/Ix4ConnectorService/SqlDataExtractor/Settings/View/MsSqlOrdersSettingsView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SqlDataExtractor.Settings.View"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"  Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel Orientation="Vertical" >
         <Label Content="{Binding Source={StaticResource Localization},Path=OrdersSettingsPanel}"  
