--- a/Ix4ConnectorService/Ix4ServiceConfigurator/Controls/ScheduleControl.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/Controls/ScheduleControl.xaml
@@ -8,6 +8,7 @@
              xmlns:times="clr-namespace:Ix4Models.SettingsDataModel;assembly=Ix4Models"
              xmlns:xceed="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
              Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"
+             BorderThickness="3" BorderBrush="YellowGreen"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -18,23 +19,33 @@
 
         </ObjectDataProvider>
     </UserControl.Resources>
-    <DockPanel>
-        <DockPanel DockPanel.Dock="Top">
-            <Label Content="{Binding Source={StaticResource Localization},Path=WorkingHours}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Content="{Binding Source={StaticResource Localization},Path=WorkingHours}" Margin="5" HorizontalAlignment="Center"  Grid.ColumnSpan="2" VerticalAlignment="Top"/>
+        <DockPanel DockPanel.Dock="Top" Grid.Column="0" Grid.Row="1" Margin="5">
+
             <Label Content="{Binding Source={StaticResource Localization},Path=From}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
             <xceed:TimePicker Kind="Local" TimeInterval="1" Value="{Binding StartTime}" Width="100" Height="20" DockPanel.Dock="Left" VerticalAlignment="Top" />
+        </DockPanel>
+        <DockPanel DockPanel.Dock="Top" Grid.Column="1" Grid.Row="1" Margin="5">
             <Label Content="{Binding Source={StaticResource Localization},Path=To}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
             <xceed:TimePicker Kind="Local" TimeInterval="1" Value="{Binding EndTime}" Width="100" Height="20" HorizontalAlignment="Left" DockPanel.Dock="Left" VerticalAlignment="Top" />
         </DockPanel>
-        <DockPanel DockPanel.Dock="Top">
-            <CheckBox IsChecked="{Binding UseSaturday}" Margin="0,5,5,0" Content="{Binding Source={StaticResource Localization}, Path=UseSat}" DockPanel.Dock="Left"/>
-            <CheckBox IsChecked="{Binding UseSunday}" Margin="0,5,5,0" Content="{Binding Source={StaticResource Localization}, Path=UseSun}" DockPanel.Dock="Left"/>
+        <CheckBox IsChecked="{Binding UseSaturday}" Grid.Column="0" Grid.Row="2" Margin="5" Content="{Binding Source={StaticResource Localization}, Path=UseSat}" DockPanel.Dock="Left"/>
+        <CheckBox IsChecked="{Binding UseSunday}" Grid.Column="1" Grid.Row="2" Margin="5" Content="{Binding Source={StaticResource Localization}, Path=UseSun}" DockPanel.Dock="Left"/>
+        <DockPanel DockPanel.Dock="Top"  Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="5">
+            <Label Content="{Binding Source={StaticResource Localization}, Path=CheckDataEvery}" DockPanel.Dock="Left" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+            <TextBox Text="{Binding TimeGap}" Width="50" Height="20" DockPanel.Dock="Left" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+            <ComboBox Width="100" SelectedItem="{Binding GapSign}" Margin="5,0,0,0" ItemsSource="{Binding Source={StaticResource TimeSigns}}" DockPanel.Dock="Left" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         </DockPanel>
-        <DockPanel DockPanel.Dock="Top">
-            <Label Content="{Binding Source={StaticResource Localization}, Path=CheckDataEvery}" DockPanel.Dock="Left" VerticalAlignment="Top"/>
-            <TextBox Text="{Binding TimeGap}" Width="50" Height="20" DockPanel.Dock="Left" VerticalAlignment="Top"/>
-            <ComboBox Width="70" SelectedItem="{Binding GapSign}" ItemsSource="{Binding Source={StaticResource TimeSigns}}" DockPanel.Dock="Left" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        </DockPanel>
-    </DockPanel>
-   
+    </Grid>
 </UserControl>
